Working on architecture and structure

--- a/starwars/starwars/Base.lproj/Main.storyboard
+++ b/starwars/starwars/Base.lproj/Main.storyboard
@@ -26,30 +26,26 @@
             </objects>
             <point key="canvasLocation" x="-142" y="-36"/>
         </scene>
-        <!--View Controller-->
+        <!--People View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="starwars" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="PeopleViewController" customModule="starwars" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Star Wars Characters" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m5m-IF-BRg">
-                                <rect key="frame" x="10" y="40" width="355" height="20"/>
+                                <rect key="frame" x="10" y="84" width="355" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xZj-Ue-kW1">
-                                <rect key="frame" x="10" y="70" width="355" height="597"/>
+                                <rect key="frame" x="10" y="114" width="355" height="553"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <scrollView key="tableHeaderView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="lF0-fp-S5A">
-                                    <rect key="frame" x="0.0" y="0.0" width="355" height="44"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                </scrollView>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="y2K-9V-K1S">
-                                        <rect key="frame" x="0.0" y="72" width="355" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="355" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="y2K-9V-K1S" id="Ss9-LH-U6u">
                                             <rect key="frame" x="0.0" y="0.0" width="355" height="43.5"/>
@@ -74,8 +70,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="0YG-76-a48"/>
                     <connections>
-                        <outlet property="myTableView" destination="xZj-Ue-kW1" id="BUT-Lz-Hs1"/>
-                        <segue destination="uKW-A4-fK7" kind="show" identifier="goDetail" id="5zh-0e-Vju"/>
+                        <outlet property="titleLabel" destination="m5m-IF-BRg" id="ssl-cZ-RtX"/>
+                        <outlet property="tvPeople" destination="xZj-Ue-kW1" id="UFa-4E-iun"/>
+                        <segue destination="uKW-A4-fK7" kind="show" identifier="goToDetail" id="5zh-0e-Vju"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -91,7 +88,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="9Rn-n2-Uq9">
-                                <rect key="frame" x="10" y="70" width="355" height="263"/>
+                                <rect key="frame" x="10" y="114" width="355" height="263"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Character Detail" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nPD-f8-JM6">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="20.5"/>
@@ -187,7 +184,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1OO-U2-9sc">
-                                <rect key="frame" x="10" y="353" width="355" height="30"/>
+                                <rect key="frame" x="10" y="397" width="355" height="30"/>
                                 <state key="normal" title="Cancel"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" identifier="backToList" id="tQe-0d-CEb"/>
@@ -219,7 +216,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="5zh-0e-Vju"/>
-        <segue reference="tQe-0d-CEb"/>
+        <segue reference="wac-Sx-SaN"/>
     </inferredMetricsTieBreakers>
 </document>
